--- a/css/style.css
+++ b/css/style.css
@@ -151,3 +151,9 @@ input[type="text"] {
   height: 2px;
   background: #333;
 }
+
+@media (max-width: 600px) {
+  .container {
+    width: 300px;
+  }
+}
